# bank-of-canada

./: .gitignore  README.md  dev.py  main.py  pyproject.toml  source.json
.github/workflows/: run.yml
.state/iceberg/: groups.json  series_data.json  series_list.json
.state/local/: groups.json  series_data.json  series_list.json
assets/groups/: groups.py
assets/series_data/: series_data.py
assets/series_list/: series_list.py
catalog/: status.json  sync.py
data/analysis/: ACTUAL.meta.json  ACTUAL.parquet  ATOM_V41693242.meta.json  ATOM_V41693242.parquet  AVG.INTWO.meta.json  AVG.INTWO.parquet  BD.CDN.10YR.DQ.YLD.meta.json  BD.CDN.10YR.DQ.YLD.parquet  BD.CDN.2YR.DQ.YLD.meta.json  BD.CDN.2YR.DQ.YLD.parquet  BD.CDN.3YR.DQ.YLD.meta.json  BD.CDN.3YR.DQ.YLD.parquet  BD.CDN.5YR.DQ.YLD.meta.json  BD.CDN.5YR.DQ.YLD.parquet  BD.CDN.7YR.DQ.YLD.meta.json  BD.CDN.7YR.DQ.YLD.parquet  BD.CDN.LONG.DQ.YLD.meta.json  BD.CDN.LONG.DQ.YLD.parquet  BD.CDN.RRB.DQ.YLD.meta.json  BD.CDN.RRB.DQ.YLD.parquet  BOC_ALL_OTHER_ASSETS.meta.json  BOC_ALL_OTHER_ASSETS.parquet  BOC_ALL_OTHER_LIABILITIES.meta.json  BOC_ALL_OTHER_LIABILITIES.parquet  BROKER_AVERAGE_5YR_VRM.meta.json  BROKER_AVERAGE_5YR_VRM.parquet  BUSEFFRATE.meta.json  BUSEFFRATE.parquet  CBC20210.meta.json  CBC20210.parquet  CDN.AVG.1YTO3Y.AVG.meta.json  CDN.AVG.1YTO3Y.AVG.parquet  CDN.AVG.3YTO5Y.AVG.meta.json  CDN.AVG.3YTO5Y.AVG.parquet  CDN.AVG.5YTO10Y.AVG.meta.json  CDN.AVG.5YTO10Y.AVG.parquet  CDN.AVG.OVER.10.AVG.meta.json  CDN.AVG.OVER.10.AVG.parquet  CEER_BROADN.meta.json  CEER_BROADN.parquet  (+11 more)
src/: main.py
(+73 files in other folders)
